===========

- @version-full@ (@release-date@)
    - API changes
        - Moved Message, Request and Response classes from the
          org.restlet.data to the org.restlet package as they are
          core artifacts of the API used in Uniform interface.
        - Deprecated Redirector.MODE_DISPATCHER to introduce support
          for MODE_CLIENT_DISPATCHER and MODE_SERVER_DISPATCHER.
    - Bugs fixed
        - Added Simple extension to the JEE edition.
          Reported by Dustin Jenkins.
        - Fixed bug detected in the CharacterSet class when running in 
          the MacOS context. Reported by John Logsdon.
        - Removed the TaskService from the GAE edition as we are not
          allowed to create threads. Reported by Olivier Bruchez.
        - Fixed pom dependencies groupId. Reported by Rémi Dewitte.
        - Fixed potential bug with RangeInputStream causing 100% CPU 
          utilization with java NIO.
          Reported and contributed by Tal Liron.
        - Router#attachDefault() method now relies on the protected
          createRoute() method. Reported by Rob Heittman.
        - Fixed potential synchronization issues.
        - Fixed concurrency issue with annotated methods that could 
          result in wrong methods invoked. Reported by John Logsdon.
          Isolation of issue by Filip Hanik from the Tomcat team.
        - Improved robustness of internal HTTPS client with trust 
          stores. Suggested by Bruno Harbulot.
        - Fixed bug that would prevent the GWT callback from being
          called if some exception occured.
     - Enhancements
        - Added support of the "xml:base" attibute when parsing Atom 
          Publishing documents.
        - Updated Grizzly to version 1.9.17.
        - Updated FileUpload to version 1.2.1.
        - Updated JavaMail to version 1.4.2.
        - Updated JAXB RI to version 2.1.12.
        - Updated JSON library to version from 2009/08/16.
        - Updated Lucene to version 2.4.1.